Fix display on Firefox

--- a/app/components/ContentBlock.styl
+++ b/app/components/ContentBlock.styl
@@ -26,7 +26,16 @@
         min-height: 20rem
         margin-bottom: 5rem
         background-color: rgba(24, 28, 31, 0.8)
-        outline: 3px solid rgba(24, 28, 31, 0.2)
+
+        // Custom "shadow" border
+        &:after
+            content: ''
+            position: absolute
+            top: -3px
+            left: -3px
+            right: -3px
+            bottom: -3px
+            border: 3px solid rgba(24, 28, 31, 0.2)
 
     &__text
         margin-bottom: 2rem
