--- a/app/components/Ribbon.styl
+++ b/app/components/Ribbon.styl
@@ -10,6 +10,7 @@ $ribbon-right-corner-size = 10px
 
     &__text
         position: relative
+        z-index: 1
         display: inline-block
 
         width: calc(100% - 20px)
